Minor bug fix in banner section.
In line 337, I fixed cropped sentence issue.

--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,7 @@ button {
 }
 
 .booking_text{
+     top: 2%;
      width: 100%;
      float: left;
      font-size: 26px;
